# bing_show

./: .clang-format  CMakeLists.txt  main.cpp
